backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-express-demo
  labels: 
    app: backend-express-demo
    role: backend
    env: test
spec:
  selector:
    matchLabels:
      app: backend-express-demo
  replicas: 2    
  template:
    metadata:
      labels:
        app: backend-express-demo
        role: backend
        env: test
    spec:
      containers:
      - name: backend-express-demo
        image: backend-express-demo:v2
        ports:
        - containerPort: 4000
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 200m
