backend/depoyment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-express-demo
  labels: 
    app: backend-express-demo
    role: backend
    env: test
spec:
  selector:
    matchLabels:
      app: backend-express-demo
  replicas: 2    
  template:
    metadata:
      labels:
        app: backend-express-demo
        role: backend
        env: test
    spec:
      containers:
      - name: backend-express-demo
        image: backend-express-demo:v4
        ports:
        - containerPort: 4000
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 200m
        livenessProbe:
          httpGet:
            path: /healthz
            port: 4000
            httpHeaders:
            - name: Custom-Header
              value: k8s-liveness-probes
          initialDelaySeconds: 3
          periodSeconds: 3
---
apiVersion: v1
kind: Service
metadata:
  name: backend-express-demo
  labels:
    app: backend-express-demo
    role: backend
    env: test
spec:
  type: LoadBalancer
  ports:
  - port: 4000
  selector:
    app: backend-express-demo
    role: backend
    env: test
