backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-express-demo
  labels:
    app: backend-express-demo
    role: backend
    env: test
spec:
  type: LoadBalancer
  ports:
  - port: 4000
  selector:
    app: backend-express-demo
    role: backend
    env: test
